asm-ingress/networkpolicy_denyall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyall
  namespace: asm-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
